--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             >
               <!-- MAIN IMAGE -->
               <img
-                src="asset/img/slider.jpg"
+                src="asset/img/pts.jpg"
                 data-bgposition="center center"
                 data-bgfit="cover"
                 data-bgrepeat="no-repeat"
@@ -418,7 +418,7 @@
     <!--Counters sec Start-->
     <div
       class="count-sec count-sec1"
-      style="background: url('asset/img/slider.jpg')"
+      style="background: url('asset/img/pts.jpg')"
     >
       <div class="count-overlay"></div>
       <div class="container">
