--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
               <a class="nav-link" href="notices/index.html">NOTICES</a>
               <a class="nav-link" href="extoff/index.html">USERS</a>
               <a class="nav-link" href="ide/index.html">IDE</a>
-              <a class="nav-link" href=""><!--lien blog-->
-                >BLOGS</a
-              >
+              <a class="nav-link" href="#slider-sec">BLOGS</a>
               <a class="nav-link" href="contact/index.html">CONTACT US</a>
               <a class="nav-link" href="auth/index.php">LOGIN</a>
             </div>
@@ -111,9 +109,7 @@
                 <a class="nav-link" href="ide/index.html">IDE</a>
               </li>
               <li class="nav-item">
-                < class="nav-link" href="<!--lien blog -->"
-                  >BLOGS</a
-                >
+                <a class="nav-link" href="#slider-sec">BLOGS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">CONTACT US</a>
